# device-management

./: .env.example  BUGBASH-PLAN.md  Makefile  docker-compose.yml  run-all.sh
api-gateway/: .gitignore  (+4 more)
device-service/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
device-service/alembic/: env.py
device-service/alembic/versions/: 73196ec538a5_add_device_version.py  83e79a6b2458_outbox_attempts.py  89948eec703a_create_outbox.py  90e2206cf539_create_devices.py  9cee86796653_create_device_read_model.py  a1b2c3d4e5f6_add_device_updated_at.py  ae69bcdc89f9_create_saga_state.py
device-service/app/: cli.py  contracts.py  main.py  settings.py
device-service/app/delivery/: deps.py  devices.py  errors.py  response_models.py  wiring.py
device-service/app/devices/: dto.py  mapper.py  repository.py  service.py
device-service/app/domain/: devices.py
device-service/app/outbox/: events.py  repository.py
device-service/infra/db/: models.py  session.py
device-service/infra/devices/: device_read_repository.py  in_memory_device_repository.py  sqlalchemy_device_repository.py
device-service/infra/outbox/: sqlalchemy_outbox_repository.py
device-service/infra/security/: jwt.py
device-service/src/queries/: device-list.sql
device-service/tests/: test_domain.py  test_repository.py  test_service.py
device-worker/: .dockerignore  .env.example  Dockerfile  env.example  pyproject.toml
device-worker/tests/: test_retry.py  test_sagas.py
device-worker/worker/: circuit_breaker.py  dev.py  main.py  models.py  outbox.py  projector.py  sagas.py  settings.py
(+52 files in other folders)
